[package]
name = "apex-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-io = "0.6.1"
embedded-io-adapters = { version = "0.6.1", features = ["tokio-1"] }
embedded-io-async = "0.6.1"
embedded-nal-async = "0.7.1"
env_logger = "0.11.5"
log = "0.4.22"
neptune-apex = { version = "0.1.0", path = "../neptune-apex" }
reqwless = { workspace = true }
tokio = { version = "1.40.0", features = [
    "macros",
    "mio",
    "net",
    "rt",
    "rt-multi-thread",
    "tokio-macros",
] }
