[package]
name = "neptune-apex"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-nal-async = "0.7.1"
log = "0.4.22"
reqwless = { workspace = true }
serde = { version = "1.0.210", default-features = false, features = [
	"alloc",
	"derive",
] }
serde_json = { version = "1.0.128", default-features = false, features = [
	"alloc",
] }
serde_repr = "0.1.19"

[features]
default = ["std"]
std = []
